@@ -1,3 +1,9 @@
+2001-09-24  Bruno Haible  <haible@clisp.cons.org>
+
+	* po-lex.c (mb_iseq): Compare the byte sequence, not the Unicode
+	equivalent. This is necessary for non-ASCII-compatible encodings like
+	SHIFT_JIS.
+
 2001-09-08  Bruno Haible  <haible@clisp.cons.org>
 
 	* msgunfmt.h: New file.
